etapa4/parser/parser.output
Terminals unused in grammar

   TOKEN_ERRO


Grammar

    0 $accept: programa $end

    1 programa: scopeOpenner componentes

    2 scopeOpenner: %empty

    3 componentes: %empty
    4            | componente componentes

    5 idThatCanBeFuncType: TK_IDENTIFICADOR

    6 idThatCanBeFuncName: TK_IDENTIFICADOR

    7 componente: novoTipo
    8           | idThatCanBeFuncType depoisDeIdent
    9           | funcName scopeOpenner funcArgs blocoComandos

   10 depoisDeIdent: tamanhoVetor static tipo ';'
   11              | TK_PR_STATIC tipo ';'
   12              | tiposPrimitivos ';'
   13              | idThatCanBeFuncName fechaVarOuFunc

   14 fechaVarOuFunc: ';'
   15               | userTypeFunc scopeOpenner funcArgs blocoComandos

   16 userTypeFunc: %empty

   17 encapsulamento: %empty
   18               | TK_PR_PRIVATE
   19               | TK_PR_PUBLIC
   20               | TK_PR_PROTECTED

   21 tiposPrimitivos: TK_PR_INT
   22                | TK_PR_FLOAT
   23                | TK_PR_BOOL
   24                | TK_PR_CHAR
   25                | TK_PR_STRING

   26 tipo: tiposPrimitivos
   27     | TK_IDENTIFICADOR

   28 static: TK_PR_STATIC
   29       | %empty

   30 tipoConst: TK_PR_CONST tipo
   31          | tipo

   32 literais: TK_LIT_INT
   33         | TK_LIT_FLOAT
   34         | TK_LIT_FALSE
   35         | TK_LIT_TRUE
   36         | TK_LIT_CHAR
   37         | TK_LIT_STRING

   38 novoTipo: TK_PR_CLASS TK_IDENTIFICADOR listaCampos ';'

   39 listaCampos: '[' list ']'

   40 list: campo
   41     | campo ':' list

   42 campo: encapsulamento tiposPrimitivos TK_IDENTIFICADOR

   43 tamanhoVetor: '[' TK_LIT_INT ']'

   44 args: %empty
   45     | parameters

   46 parameters: parameter ',' parameters
   47           | parameter

   48 parameter: tipoConst TK_IDENTIFICADOR

   49 funcName: tiposPrimitivos TK_IDENTIFICADOR
   50         | TK_PR_STATIC tipo TK_IDENTIFICADOR

   51 funcArgs: '(' args ')'

   52 blocoComandos: '{' scopeOpenner comandos '}'

   53 comando: comandoSimples ';'
   54        | case

   55 comandos: %empty
   56         | comando comandos

   57 comandoSimples: comandosSemVirgula
   58               | output
   59               | funcCall
   60               | foreach
   61               | for

   62 comandosSemVirgula: localVarDefinition
   63                   | assignment
   64                   | input
   65                   | shift
   66                   | TK_PR_BREAK
   67                   | TK_PR_CONTINUE
   68                   | return
   69                   | ifThenElse
   70                   | while_do
   71                   | do_while
   72                   | switch
   73                   | pipe
   74                   | blocoComandos

   75 ifThenElse: TK_PR_IF '(' expression ')' TK_PR_THEN blocoComandos optElse

   76 optElse: %empty
   77        | TK_PR_ELSE blocoComandos

   78 foreach: TK_PR_FOREACH '(' TK_IDENTIFICADOR ':' foreachList ')' blocoComandos

   79 for: scopeOpenner TK_PR_FOR '(' forList ':' expression ':' forList ')' blocoComandos

   80 while_do: TK_PR_WHILE '(' expression ')' TK_PR_DO blocoComandos

   81 do_while: TK_PR_DO blocoComandos TK_PR_WHILE '(' expression ')'

   82 foreachList: expression
   83            | foreachList ',' expression

   84 forList: comandosSemVirgula
   85        | forList ',' comandosSemVirgula

   86 switch: TK_PR_SWITCH '(' expression ')' blocoComandos

   87 case: TK_PR_CASE TK_LIT_INT ':'

   88 localVarDefinition: TK_PR_STATIC TK_IDENTIFICADOR TK_IDENTIFICADOR
   89                   | TK_PR_CONST TK_IDENTIFICADOR TK_IDENTIFICADOR
   90                   | TK_PR_STATIC TK_PR_CONST TK_IDENTIFICADOR TK_IDENTIFICADOR
   91                   | TK_IDENTIFICADOR TK_IDENTIFICADOR
   92                   | TK_PR_STATIC tiposPrimitivos TK_IDENTIFICADOR
   93                   | TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR
   94                   | TK_PR_STATIC TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR
   95                   | tiposPrimitivos TK_IDENTIFICADOR
   96                   | TK_PR_STATIC tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR
   97                   | TK_PR_STATIC tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveIdentifier
   98                   | TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR
   99                   | TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveIdentifier
  100                   | TK_PR_STATIC TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR
  101                   | TK_PR_STATIC TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveIdentifier
  102                   | tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE TK_IDENTIFICADOR
  103                   | tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveIdentifier
  104                   | TK_PR_STATIC TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE literais
  105                   | TK_PR_STATIC TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveLiteral
  106                   | TK_PR_STATIC tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE literais
  107                   | TK_PR_STATIC tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveLiteral
  108                   | TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE literais
  109                   | TK_PR_CONST tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveLiteral
  110                   | tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE literais
  111                   | tiposPrimitivos TK_IDENTIFICADOR TK_OC_LE negativeOrPositiveLiteral

  112 negativeOrPositiveIdentifier: '-' negativeOrPositiveIdentifier
  113                             | '-' TK_IDENTIFICADOR
  114                             | '+' negativeOrPositiveIdentifier
  115                             | '+' TK_IDENTIFICADOR

  116 negativeOrPositiveLiteral: '-' negativeOrPositiveLiteral
  117                          | '-' TK_LIT_INT
  118                          | '-' TK_LIT_FLOAT
  119                          | '+' negativeOrPositiveLiteral
  120                          | '+' TK_LIT_INT
  121                          | '+' TK_LIT_FLOAT

  122 assignment: TK_IDENTIFICADOR '=' expression
  123           | TK_IDENTIFICADOR '[' expression ']' '=' expression
  124           | TK_IDENTIFICADOR '$' TK_IDENTIFICADOR '=' expression
  125           | TK_IDENTIFICADOR '[' expression ']' '$' TK_IDENTIFICADOR '=' expression

  126 input: TK_PR_INPUT expression

  127 output: TK_PR_OUTPUT expression continueOutput
  128       | TK_PR_OUTPUT expression

  129 continueOutput: ',' expression
  130               | ',' expression continueOutput

  131 funcCall: TK_IDENTIFICADOR '(' argsCall ')'
  132         | TK_IDENTIFICADOR '(' ')'

  133 argsCall: argCall
  134         | argsCall ',' argCall

  135 argCall: expression
  136        | '.'

  137 shiftOp: TK_OC_SL
  138        | TK_OC_SR

  139 shift: TK_IDENTIFICADOR shiftOp expression
  140      | TK_IDENTIFICADOR '$' TK_IDENTIFICADOR shiftOp expression
  141      | TK_IDENTIFICADOR '[' expression ']' shiftOp expression
  142      | TK_IDENTIFICADOR '[' expression ']' '$' TK_IDENTIFICADOR shiftOp expression

  143 return: TK_PR_RETURN expression

  144 expression: expression operators parenthesisOrOperand
  145           | expression operators infiniteQuestionMarks
  146           | parenthesisOrOperand
  147           | infiniteQuestionMarks

  148 infiniteQuestionMarks: parenthesisOrOperand '?'
  149                      | infiniteQuestionMarks '?'

  150 savePipe: funcCall

  151 pipe: savePipe TK_OC_FORWARD_PIPE funcCall
  152     | pipe TK_OC_FORWARD_PIPE funcCall
  153     | savePipe TK_OC_BASH_PIPE funcCall
  154     | pipe TK_OC_BASH_PIPE funcCall

  155 parenthesisOrOperand: '(' expression ')'
  156                     | operands
  157                     | '-' parenthesisOrOperand
  158                     | '+' parenthesisOrOperand
  159                     | '!' parenthesisOrOperand
  160                     | '*' parenthesisOrOperand
  161                     | '&' parenthesisOrOperand
  162                     | '#' parenthesisOrOperand

  163 operands: TK_IDENTIFICADOR '[' expression ']'
  164         | TK_IDENTIFICADOR
  165         | TK_IDENTIFICADOR '$' TK_IDENTIFICADOR
  166         | TK_IDENTIFICADOR '[' expression ']' '$' TK_IDENTIFICADOR
  167         | TK_LIT_INT
  168         | TK_LIT_FLOAT
  169         | TK_LIT_TRUE
  170         | TK_LIT_FALSE
  171         | TK_LIT_CHAR
  172         | TK_LIT_STRING
  173         | funcCall
  174         | pipe

  175 operators: '+'
  176          | '-'
  177          | '*'
  178          | '/'
  179          | '%'
  180          | '^'
  181          | TK_OC_AND
  182          | TK_OC_OR
  183          | '|'
  184          | '&'
  185          | TK_OC_EQ
  186          | TK_OC_NE
  187          | TK_OC_GE
  188          | TK_OC_LE
  189          | '<'
  190          | '>'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 159
'#' (35) 162
'$' (36) 124 125 140 142 165 166
'%' (37) 179
'&' (38) 161 184
'(' (40) 51 75 78 79 80 81 86 131 132 155
')' (41) 51 75 78 79 80 81 86 131 132 155
'*' (42) 160 177
'+' (43) 114 115 119 120 121 158 175
',' (44) 46 83 85 129 130 134
'-' (45) 112 113 116 117 118 157 176
'.' (46) 136
'/' (47) 178
':' (58) 41 78 79 87
';' (59) 10 11 12 14 38 53
'<' (60) 189
'=' (61) 122 123 124 125
'>' (62) 190
'?' (63) 148 149
'[' (91) 39 43 123 125 141 142 163 166
']' (93) 39 43 123 125 141 142 163 166
'^' (94) 180
'{' (123) 52
'|' (124) 183
'}' (125) 52
error (256)
TK_PR_INT (258) 21
TK_PR_FLOAT (259) 22
TK_PR_BOOL (260) 23
TK_PR_CHAR (261) 24
TK_PR_STRING (262) 25
TK_PR_IF (263) 75
TK_PR_THEN (264) 75
TK_PR_ELSE (265) 77
TK_PR_WHILE (266) 80 81
TK_PR_DO (267) 80 81
TK_PR_INPUT (268) 126
TK_PR_OUTPUT (269) 127 128
TK_PR_RETURN (270) 143
TK_PR_CONST (271) 30 89 90 93 94 98 99 100 101 104 105 108 109
TK_PR_STATIC (272) 11 28 50 88 90 92 94 96 97 100 101 104 105 106 107
TK_PR_FOREACH (273) 78
TK_PR_FOR (274) 79
TK_PR_SWITCH (275) 86
TK_PR_CASE (276) 87
TK_PR_BREAK (277) 66
TK_PR_CONTINUE (278) 67
TK_PR_CLASS (279) 38
TK_PR_PRIVATE (280) 18
TK_PR_PUBLIC (281) 19
TK_PR_PROTECTED (282) 20
TK_OC_LE (283) 96 97 98 99 100 101 102 103 104 105 106 107 108 109
    110 111 188
TK_OC_GE (284) 187
TK_OC_EQ (285) 185
TK_OC_NE (286) 186
TK_OC_AND (287) 181
TK_OC_OR (288) 182
TK_OC_SL (289) 137
TK_OC_SR (290) 138
TK_OC_FORWARD_PIPE (291) 151 152
TK_OC_BASH_PIPE (292) 153 154
TK_LIT_INT (293) 32 43 87 117 120 167
TK_LIT_FLOAT (294) 33 118 121 168
TK_LIT_FALSE (295) 34 170
TK_LIT_TRUE (296) 35 169
TK_LIT_CHAR (297) 36 171
TK_LIT_STRING (298) 37 172
TK_IDENTIFICADOR (299) 5 6 27 38 42 48 49 50 78 88 89 90 91 92 93 94
    95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    113 115 122 123 124 125 131 132 139 140 141 142 163 164 165 166
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
programa (72)
    on left: 1, on right: 0
scopeOpenner (73)
    on left: 2, on right: 1 9 15 52 79
componentes (74)
    on left: 3 4, on right: 1 4
idThatCanBeFuncType (75)
    on left: 5, on right: 8
idThatCanBeFuncName (76)
    on left: 6, on right: 13
componente (77)
    on left: 7 8 9, on right: 4
depoisDeIdent (78)
    on left: 10 11 12 13, on right: 8
fechaVarOuFunc (79)
    on left: 14 15, on right: 13
userTypeFunc (80)
    on left: 16, on right: 15
encapsulamento (81)
    on left: 17 18 19 20, on right: 42
tiposPrimitivos (82)
    on left: 21 22 23 24 25, on right: 12 26 42 49 92 93 94 95 96 97
    98 99 100 101 102 103 104 105 106 107 108 109 110 111
tipo (83)
    on left: 26 27, on right: 10 11 30 31 50
static (84)
    on left: 28 29, on right: 10
tipoConst (85)
    on left: 30 31, on right: 48
literais (86)
    on left: 32 33 34 35 36 37, on right: 104 106 108 110
novoTipo (87)
    on left: 38, on right: 7
listaCampos (88)
    on left: 39, on right: 38
list (89)
    on left: 40 41, on right: 39 41
campo (90)
    on left: 42, on right: 40 41
tamanhoVetor (91)
    on left: 43, on right: 10
args (92)
    on left: 44 45, on right: 51
parameters (93)
    on left: 46 47, on right: 45 46
parameter (94)
    on left: 48, on right: 46 47
funcName (95)
    on left: 49 50, on right: 9
funcArgs (96)
    on left: 51, on right: 9 15
blocoComandos (97)
    on left: 52, on right: 9 15 74 75 77 78 79 80 81 86
comando (98)
    on left: 53 54, on right: 56
comandos (99)
    on left: 55 56, on right: 52 56
comandoSimples (100)
    on left: 57 58 59 60 61, on right: 53
comandosSemVirgula (101)
    on left: 62 63 64 65 66 67 68 69 70 71 72 73 74, on right: 57 84
    85
ifThenElse (102)
    on left: 75, on right: 69
optElse (103)
    on left: 76 77, on right: 75
foreach (104)
    on left: 78, on right: 60
for (105)
    on left: 79, on right: 61
while_do (106)
    on left: 80, on right: 70
do_while (107)
    on left: 81, on right: 71
foreachList (108)
    on left: 82 83, on right: 78 83
forList (109)
    on left: 84 85, on right: 79 85
switch (110)
    on left: 86, on right: 72
case (111)
    on left: 87, on right: 54
localVarDefinition (112)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111, on right: 62
negativeOrPositiveIdentifier (113)
    on left: 112 113 114 115, on right: 97 99 101 103 112 114
negativeOrPositiveLiteral (114)
    on left: 116 117 118 119 120 121, on right: 105 107 109 111 116
    119
assignment (115)
    on left: 122 123 124 125, on right: 63
input (116)
    on left: 126, on right: 64
output (117)
    on left: 127 128, on right: 58
continueOutput (118)
    on left: 129 130, on right: 127 130
funcCall (119)
    on left: 131 132, on right: 59 150 151 152 153 154 173
argsCall (120)
    on left: 133 134, on right: 131 134
argCall (121)
    on left: 135 136, on right: 133 134
shiftOp (122)
    on left: 137 138, on right: 139 140 141 142
shift (123)
    on left: 139 140 141 142, on right: 65
return (124)
    on left: 143, on right: 68
expression (125)
    on left: 144 145 146 147, on right: 75 79 80 81 82 83 86 122 123
    124 125 126 127 128 129 130 135 139 140 141 142 143 144 145 155
    163 166
infiniteQuestionMarks (126)
    on left: 148 149, on right: 145 147 149
savePipe (127)
    on left: 150, on right: 151 153
pipe (128)
    on left: 151 152 153 154, on right: 73 152 154 174
parenthesisOrOperand (129)
    on left: 155 156 157 158 159 160 161 162, on right: 144 146 148
    157 158 159 160 161 162
operands (130)
    on left: 163 164 165 166 167 168 169 170 171 172 173 174, on right:
    156
operators (131)
    on left: 175 176 177 178 179 180 181 182 183 184 185 186 187 188
    189 190, on right: 144 145


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (scopeOpenner)

    programa      go to state 1
    scopeOpenner  go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: scopeOpenner . componentes

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_STATIC      shift, and go to state 9
    TK_PR_CLASS       shift, and go to state 10
    TK_IDENTIFICADOR  shift, and go to state 11

    $default  reduce using rule 3 (componentes)

    componentes          go to state 12
    idThatCanBeFuncType  go to state 13
    componente           go to state 14
    tiposPrimitivos      go to state 15
    novoTipo             go to state 16
    funcName             go to state 17


State 3

    0 $accept: programa $end .

    $default  accept


State 4

   21 tiposPrimitivos: TK_PR_INT .

    $default  reduce using rule 21 (tiposPrimitivos)


State 5

   22 tiposPrimitivos: TK_PR_FLOAT .

    $default  reduce using rule 22 (tiposPrimitivos)


State 6

   23 tiposPrimitivos: TK_PR_BOOL .

    $default  reduce using rule 23 (tiposPrimitivos)


State 7

   24 tiposPrimitivos: TK_PR_CHAR .

    $default  reduce using rule 24 (tiposPrimitivos)


State 8

   25 tiposPrimitivos: TK_PR_STRING .

    $default  reduce using rule 25 (tiposPrimitivos)


State 9

   50 funcName: TK_PR_STATIC . tipo TK_IDENTIFICADOR

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_IDENTIFICADOR  shift, and go to state 18

    tiposPrimitivos  go to state 19
    tipo             go to state 20


State 10

   38 novoTipo: TK_PR_CLASS . TK_IDENTIFICADOR listaCampos ';'

    TK_IDENTIFICADOR  shift, and go to state 21


State 11

    5 idThatCanBeFuncType: TK_IDENTIFICADOR .

    $default  reduce using rule 5 (idThatCanBeFuncType)


State 12

    1 programa: scopeOpenner componentes .

    $default  reduce using rule 1 (programa)


State 13

    8 componente: idThatCanBeFuncType . depoisDeIdent

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_STATIC      shift, and go to state 22
    TK_IDENTIFICADOR  shift, and go to state 23
    '['               shift, and go to state 24

    idThatCanBeFuncName  go to state 25
    depoisDeIdent        go to state 26
    tiposPrimitivos      go to state 27
    tamanhoVetor         go to state 28


State 14

    4 componentes: componente . componentes

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_STATIC      shift, and go to state 9
    TK_PR_CLASS       shift, and go to state 10
    TK_IDENTIFICADOR  shift, and go to state 11

    $default  reduce using rule 3 (componentes)

    componentes          go to state 29
    idThatCanBeFuncType  go to state 13
    componente           go to state 14
    tiposPrimitivos      go to state 15
    novoTipo             go to state 16
    funcName             go to state 17


State 15

   49 funcName: tiposPrimitivos . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 30


State 16

    7 componente: novoTipo .

    $default  reduce using rule 7 (componente)


State 17

    9 componente: funcName . scopeOpenner funcArgs blocoComandos

    $default  reduce using rule 2 (scopeOpenner)

    scopeOpenner  go to state 31


State 18

   27 tipo: TK_IDENTIFICADOR .

    $default  reduce using rule 27 (tipo)


State 19

   26 tipo: tiposPrimitivos .

    $default  reduce using rule 26 (tipo)


State 20

   50 funcName: TK_PR_STATIC tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 32


State 21

   38 novoTipo: TK_PR_CLASS TK_IDENTIFICADOR . listaCampos ';'

    '['  shift, and go to state 33

    listaCampos  go to state 34


State 22

   11 depoisDeIdent: TK_PR_STATIC . tipo ';'

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_IDENTIFICADOR  shift, and go to state 18

    tiposPrimitivos  go to state 19
    tipo             go to state 35


State 23

    6 idThatCanBeFuncName: TK_IDENTIFICADOR .

    $default  reduce using rule 6 (idThatCanBeFuncName)


State 24

   43 tamanhoVetor: '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 36


State 25

   13 depoisDeIdent: idThatCanBeFuncName . fechaVarOuFunc

    ';'  shift, and go to state 37

    $default  reduce using rule 16 (userTypeFunc)

    fechaVarOuFunc  go to state 38
    userTypeFunc    go to state 39


State 26

    8 componente: idThatCanBeFuncType depoisDeIdent .

    $default  reduce using rule 8 (componente)


State 27

   12 depoisDeIdent: tiposPrimitivos . ';'

    ';'  shift, and go to state 40


State 28

   10 depoisDeIdent: tamanhoVetor . static tipo ';'

    TK_PR_STATIC  shift, and go to state 41

    $default  reduce using rule 29 (static)

    static  go to state 42


State 29

    4 componentes: componente componentes .

    $default  reduce using rule 4 (componentes)


State 30

   49 funcName: tiposPrimitivos TK_IDENTIFICADOR .

    $default  reduce using rule 49 (funcName)


State 31

    9 componente: funcName scopeOpenner . funcArgs blocoComandos

    '('  shift, and go to state 43

    funcArgs  go to state 44


State 32

   50 funcName: TK_PR_STATIC tipo TK_IDENTIFICADOR .

    $default  reduce using rule 50 (funcName)


State 33

   39 listaCampos: '[' . list ']'

    TK_PR_PRIVATE    shift, and go to state 45
    TK_PR_PUBLIC     shift, and go to state 46
    TK_PR_PROTECTED  shift, and go to state 47

    $default  reduce using rule 17 (encapsulamento)

    encapsulamento  go to state 48
    list            go to state 49
    campo           go to state 50


State 34

   38 novoTipo: TK_PR_CLASS TK_IDENTIFICADOR listaCampos . ';'

    ';'  shift, and go to state 51


State 35

   11 depoisDeIdent: TK_PR_STATIC tipo . ';'

    ';'  shift, and go to state 52


State 36

   43 tamanhoVetor: '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 53


State 37

   14 fechaVarOuFunc: ';' .

    $default  reduce using rule 14 (fechaVarOuFunc)


State 38

   13 depoisDeIdent: idThatCanBeFuncName fechaVarOuFunc .

    $default  reduce using rule 13 (depoisDeIdent)


State 39

   15 fechaVarOuFunc: userTypeFunc . scopeOpenner funcArgs blocoComandos

    $default  reduce using rule 2 (scopeOpenner)

    scopeOpenner  go to state 54


State 40

   12 depoisDeIdent: tiposPrimitivos ';' .

    $default  reduce using rule 12 (depoisDeIdent)


State 41

   28 static: TK_PR_STATIC .

    $default  reduce using rule 28 (static)


State 42

   10 depoisDeIdent: tamanhoVetor static . tipo ';'

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_IDENTIFICADOR  shift, and go to state 18

    tiposPrimitivos  go to state 19
    tipo             go to state 55


State 43

   51 funcArgs: '(' . args ')'

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_CONST       shift, and go to state 56
    TK_IDENTIFICADOR  shift, and go to state 18

    $default  reduce using rule 44 (args)

    tiposPrimitivos  go to state 19
    tipo             go to state 57
    tipoConst        go to state 58
    args             go to state 59
    parameters       go to state 60
    parameter        go to state 61


State 44

    9 componente: funcName scopeOpenner funcArgs . blocoComandos

    '{'  shift, and go to state 62

    blocoComandos  go to state 63


State 45

   18 encapsulamento: TK_PR_PRIVATE .

    $default  reduce using rule 18 (encapsulamento)


State 46

   19 encapsulamento: TK_PR_PUBLIC .

    $default  reduce using rule 19 (encapsulamento)


State 47

   20 encapsulamento: TK_PR_PROTECTED .

    $default  reduce using rule 20 (encapsulamento)


State 48

   42 campo: encapsulamento . tiposPrimitivos TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 4
    TK_PR_FLOAT   shift, and go to state 5
    TK_PR_BOOL    shift, and go to state 6
    TK_PR_CHAR    shift, and go to state 7
    TK_PR_STRING  shift, and go to state 8

    tiposPrimitivos  go to state 64


State 49

   39 listaCampos: '[' list . ']'

    ']'  shift, and go to state 65


State 50

   40 list: campo .
   41     | campo . ':' list

    ':'  shift, and go to state 66

    $default  reduce using rule 40 (list)


State 51

   38 novoTipo: TK_PR_CLASS TK_IDENTIFICADOR listaCampos ';' .

    $default  reduce using rule 38 (novoTipo)


State 52

   11 depoisDeIdent: TK_PR_STATIC tipo ';' .

    $default  reduce using rule 11 (depoisDeIdent)


State 53

   43 tamanhoVetor: '[' TK_LIT_INT ']' .

    $default  reduce using rule 43 (tamanhoVetor)


State 54

   15 fechaVarOuFunc: userTypeFunc scopeOpenner . funcArgs blocoComandos

    '('  shift, and go to state 43

    funcArgs  go to state 67


State 55

   10 depoisDeIdent: tamanhoVetor static tipo . ';'

    ';'  shift, and go to state 68


State 56

   30 tipoConst: TK_PR_CONST . tipo

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_IDENTIFICADOR  shift, and go to state 18

    tiposPrimitivos  go to state 19
    tipo             go to state 69


State 57

   31 tipoConst: tipo .

    $default  reduce using rule 31 (tipoConst)


State 58

   48 parameter: tipoConst . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 70


State 59

   51 funcArgs: '(' args . ')'

    ')'  shift, and go to state 71


State 60

   45 args: parameters .

    $default  reduce using rule 45 (args)


State 61

   46 parameters: parameter . ',' parameters
   47           | parameter .

    ','  shift, and go to state 72

    $default  reduce using rule 47 (parameters)


State 62

   52 blocoComandos: '{' . scopeOpenner comandos '}'

    $default  reduce using rule 2 (scopeOpenner)

    scopeOpenner  go to state 73


State 63

    9 componente: funcName scopeOpenner funcArgs blocoComandos .

    $default  reduce using rule 9 (componente)


State 64

   42 campo: encapsulamento tiposPrimitivos . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 74


State 65

   39 listaCampos: '[' list ']' .

    $default  reduce using rule 39 (listaCampos)


State 66

   41 list: campo ':' . list

    TK_PR_PRIVATE    shift, and go to state 45
    TK_PR_PUBLIC     shift, and go to state 46
    TK_PR_PROTECTED  shift, and go to state 47

    $default  reduce using rule 17 (encapsulamento)

    encapsulamento  go to state 48
    list            go to state 75
    campo           go to state 50


State 67

   15 fechaVarOuFunc: userTypeFunc scopeOpenner funcArgs . blocoComandos

    '{'  shift, and go to state 62

    blocoComandos  go to state 76


State 68

   10 depoisDeIdent: tamanhoVetor static tipo ';' .

    $default  reduce using rule 10 (depoisDeIdent)


State 69

   30 tipoConst: TK_PR_CONST tipo .

    $default  reduce using rule 30 (tipoConst)


State 70

   48 parameter: tipoConst TK_IDENTIFICADOR .

    $default  reduce using rule 48 (parameter)


State 71

   51 funcArgs: '(' args ')' .

    $default  reduce using rule 51 (funcArgs)


State 72

   46 parameters: parameter ',' . parameters

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_CONST       shift, and go to state 56
    TK_IDENTIFICADOR  shift, and go to state 18

    tiposPrimitivos  go to state 19
    tipo             go to state 57
    tipoConst        go to state 58
    parameters       go to state 77
    parameter        go to state 61


State 73

   52 blocoComandos: '{' scopeOpenner . comandos '}'

    TK_PR_INT         shift, and go to state 4
    TK_PR_FLOAT       shift, and go to state 5
    TK_PR_BOOL        shift, and go to state 6
    TK_PR_CHAR        shift, and go to state 7
    TK_PR_STRING      shift, and go to state 8
    TK_PR_IF          shift, and go to state 78
    TK_PR_WHILE       shift, and go to state 79
    TK_PR_DO          shift, and go to state 80
    TK_PR_INPUT       shift, and go to state 81
    TK_PR_OUTPUT      shift, and go to state 82
    TK_PR_RETURN      shift, and go to state 83
    TK_PR_CONST       shift, and go to state 84
    TK_PR_STATIC      shift, and go to state 85
    TK_PR_FOREACH     shift, and go to state 86
    TK_PR_SWITCH      shift, and go to state 87
    TK_PR_CASE        shift, and go to state 88
    TK_PR_BREAK       shift, and go to state 89
    TK_PR_CONTINUE    shift, and go to state 90
    TK_IDENTIFICADOR  shift, and go to state 91
    '{'               shift, and go to state 62

    '}'       reduce using rule 55 (comandos)
    $default  reduce using rule 2 (scopeOpenner)

    scopeOpenner        go to state 92
    tiposPrimitivos     go to state 93
    blocoComandos       go to state 94
    comando             go to state 95
    comandos            go to state 96
    comandoSimples      go to state 97
    comandosSemVirgula  go to state 98
    ifThenElse          go to state 99
    foreach             go to state 100
    for                 go to state 101
    while_do            go to state 102
    do_while            go to state 103
    switch              go to state 104
    case                go to state 105
    localVarDefinition  go to state 106
    assignment          go to state 107
    input               go to state 108
    output              go to state 109
    funcCall            go to state 110
    shift               go to state 111
    return              go to state 112
    savePipe            go to state 113
    pipe                go to state 114


State 74

   42 campo: encapsulamento tiposPrimitivos TK_IDENTIFICADOR .

    $default  reduce using rule 42 (campo)


State 75

   41 list: campo ':' list .

    $default  reduce using rule 41 (list)


State 76

   15 fechaVarOuFunc: userTypeFunc scopeOpenner funcArgs blocoComandos .

    $default  reduce using rule 15 (fechaVarOuFunc)


State 77

   46 parameters: parameter ',' parameters .

    $default  reduce using rule 46 (parameters)


State 78

   75 ifThenElse: TK_PR_IF . '(' expression ')' TK_PR_THEN blocoComandos optElse

    '('  shift, and go to state 115


State 79

   80 while_do: TK_PR_WHILE . '(' expression ')' TK_PR_DO blocoComandos

    '('  shift, and go to state 116


State 80

   81 do_while: TK_PR_DO . blocoComandos TK_PR_WHILE '(' expression ')'

    '{'  shift, and go to state 62

    blocoComandos  go to state 117


State 81

  126 input: TK_PR_INPUT . expression
